# numeo-reddit-research

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ingest.yml
config/: subreddits.yaml  taxonomy.yaml
data/: numeo-reddit-highlights.txt  numeo-reddit-knowledge.txt  reddit.db
docs/: context.json  index.html  stats.json
reports/: Numeo_Reddit_Market_Research_Report.html  comprehensive-research-report.md  first-run-notes.md  market-snapshot.md
scripts/: bootstrap_pinecone.py  daily_report.py  deep_scrape_comments.py  rebuild_dashboard_data.py
src/numeo_reddit/: __init__.py  classifier.py  classify_batch.py  cli.py  db.py  embedder.py  ingest.py  query.py  reddit_client.py  stats.py  taxonomy.py
